# Jiao-sBlog

./: .env  Cargo.toml  Rocket.toml  cert.pem  key.pem
.sqlx/: query-724802f2379a44c7a7d3806707f3a74b82095f0c2518f34f3ddb50a9ed034a5f.json  query-8d1efc8ba4892b5536cf3a500372945d2160cc3a55862652f91483fdf9d56e23.json
src/: db.rs  main.rs  models.rs
src/auth/: jwt.rs  mod.rs
src/routes/: about.rs  admin.rs  archive.rs  article.rs  friends.rs  index.rs  mod.rs  tags.rs  travel.rs
src/utils/: markdown.rs
static/: foots.json  style.css
templates/: about.html.tera  admin_base.html.tera  archive.html.tera  article.html.tera  base.html.tera  friends.html.tera  index.html.tera  tag_articles.html.tera  tags.html.tera  travel.html.tera
templates/admin/: articles.html.tera  dashboard.html.tera  edit_article.html.tera  login.html.tera  new_article.html.tera  new_tag.html.tera  tags.html.tera  tags_admin.html.tera
templates/components/: sidebar.html.tera
