[package]
name = "my_blog"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rocket 框架
rocket = { version = "0.5.1", features = ["json","tls"] }

rocket_dyn_templates = { version = "0.1", features = ["tera"] }

# 数据库支持 - 添加 bigdecimal 特性
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "bigdecimal"] }

# 序列化支持
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 环境变量支持
dotenvy = "0.15"

# 异步支持
tokio = { version = "1", features = ["full"] }

# Markdown 渲染
pulldown-cmark = "0.9"

# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }


# 添加缺失的依赖
num-traits = "0.2"
bigdecimal = "0.4"

uuid = { version = "1", features = ["v4"] }
